welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:17: error: reassignment to val
  cpt = cpt+1
      ^ZigZag:27: error: reassignment to val
  	x = x+1
          ^ZigZag:29: error: reassignment to val
  	x = x-1
          ^ZigZag:31: error: value ==- is not a member of Int
  if (x==-1)
       ^ZigZag:33: error: reassignment to val
    y=y+1
     ^ZigZag:34: error: reassignment to val
    dirEst = !dirEst
           ^ZigZag:35: error: reassignment to val
    x=0
     ^ZigZag:39: error: reassignment to val
    y=y+1
     ^ZigZag:40: error: reassignment to val
    dirEst = !dirEst
           ^ZigZag:41: error: reassignment to val
    x= getMondeLargeur()
     ^